Fixed menu alignment issues on mobile in landscape mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,6 @@ ul {
 
 .navbar {
     background-color: #444444;
-    width: 100%;
     font-family: Georgia, 'Times New Roman', Times, serif;    
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -153,9 +152,9 @@ ul {
 }
 
 .navbar-expand-sm .navbar-nav .nav-link {
-    margin-right: 2rem;
-    margin-left: 2rem;
-}
+        padding-right: 2.5rem;
+        padding-left: 2.5rem;
+    }
 
 /* Underline Reveal */
 .hvr-underline-reveal {
@@ -257,7 +256,7 @@ ul {
 }
 
 #circle-cover-bg-contact {
-    background: url("../assets/images/phone.jpg") no-repeat center center;
+    background: url("../assets/images/window.jpg") no-repeat center center;
     background-size: cover;
     height:100%;
     border-radius: 50%;
@@ -389,6 +388,12 @@ footer {
 /* ---- MEDIA QUERIES ---- */
 
 @media(max-width: 992px) {
+
+    .navbar-expand-sm .navbar-nav .nav-link {
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+    }
+
         #circle-container {
         width: 18em;
         height: 18em;
